# FullstackTodo

backend/: docker-compose.yml
backend/todoapi/: .env  .gitignore  Cargo.toml  Dockerfile  README.md
backend/todoapi/migrations/: 20251016180000_create_auth_providers.sql  20251016180158_create_users.sql  20251016180159_create_equipments.sql  20251016180160_create_muscles.sql  20251018134804_create_sessions.sql  20251022201137_create_exercises.sql  20251022201157_create_routines.sql  20251022211354_create_workouts.sql  20251022213942_create_workout_logs.sql  20251027204223_create_workout_exercises.sql  20251027204224_create_exercise_logs.sql  20251027221342_create_exercise_muscles.sql  20251027222459_create_exercise_equipment.sql  20251027224635_create_owned_equipments.sql  20251030212122_seed_auth_providers.sql  20251103210100_seed_users.sql
backend/todoapi/seeds/: equipment.json  exercises.json  muscles.json
backend/todoapi/src/: main.rs
backend/todoapi/src/auth/: google.rs  mod.rs
backend/todoapi/src/middlewares/: authguard.rs  mod.rs
backend/todoapi/src/models/: equipment.rs  mod.rs  user.rs
backend/todoapi/src/routes/api/: equipment.rs  mod.rs
backend/todoapi/src/routes/auth/: login_dev.rs  login_email.rs  login_google.rs  mod.rs  providers.rs  register_email.rs  token_auth.rs  util.rs
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/components/: GSignIn.svelte  List.svelte
frontend/src/routes/: +page.svelte
frontend/src/types/: Login.ts
