[package]
name = "todoapi"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.24", features = ["json"]}
rocket = {version = "0.5.1", features = ["json"]}
rocket_cors = "0.6.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
jsonwebtoken = "9"
base64 = "0.22"
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate"]}
tokio = {version = "1", features = ["full"]}
dotenv = "0.15.0"
